Fixing feedback bar on mobile devices

--- a/app/css/footer.css
+++ b/app/css/footer.css
@@ -1,5 +1,5 @@
 .footer-master-container{
-    position: absolute;
+    position: fixed;
     bottom: -278px;
     left: 0;
     right: 0;
