--- a/app/css/index.css
+++ b/app/css/index.css
@@ -1,5 +1,7 @@
+
+
 body {
-    overflow: hidden;
+    overflow: hidden !important;
 }
 
 html, body {
@@ -204,7 +206,7 @@ h1, h2, h3, h4, h5{
     height: 56px;
 
     border-width: 0 0 2px;
-    background-color: #ffffff;
+    background-color: rgba(255,255,255,0.9);
     border-color: rgba(181, 181, 181, 1);
 
     transition:all .25s;
